EEE テクノロジを2行に

--- a/Share Beauty App/Views/EEEFirstTechnologyView.xib
+++ b/Share Beauty App/Views/EEEFirstTechnologyView.xib
@@ -36,7 +36,7 @@
                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Activate muscular cells and support exercise to promote wide-open eyes." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vPF-Qf-QY4">
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Activate muscular cells and support exercise to promote wide-open eyes." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vPF-Qf-QY4">
                                     <rect key="frame" x="149" y="434" width="727" height="63"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <fontDescription key="fontDescription" name="Reader-Bold" family="Reader" pointSize="16"/>
@@ -46,7 +46,8 @@
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vIZ-op-Jr0">
                                     <rect key="frame" x="341" y="95" width="342" height="59"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <string key="text">Digital Fatigue Focus Complex</string>
+                                    <string key="text">Digital Fatigue Focus 
+Complex</string>
                                     <fontDescription key="fontDescription" name="Reader-Bold" family="Reader" pointSize="23"/>
                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
@@ -69,7 +70,8 @@
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="edv-D6-Yst" userLabel="Third Circle Label">
                                     <rect key="frame" x="527" y="339" width="250" height="80"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <string key="text">2 ingredients derived from berries</string>
+                                    <string key="text">2 ingredients 
+derived from berries</string>
                                     <fontDescription key="fontDescription" name="Reader-Medium" family="Reader" pointSize="15"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
