--- a/Share Beauty App/Base.lproj/ProductDetailViewController.storyboard
+++ b/Share Beauty App/Base.lproj/ProductDetailViewController.storyboard
@@ -321,19 +321,22 @@
                                                                         <rect key="frame" x="0.0" y="0.0" width="636" height="1000"/>
                                                                         <subviews>
                                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LfZ-lp-GgT">
-                                                                                <rect key="frame" x="0.0" y="0.0" width="636" height="73"/>
+                                                                                <rect key="frame" x="0.0" y="0.0" width="636" height="75"/>
                                                                                 <subviews>
                                                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="T2i-9H-NeN">
-                                                                                        <rect key="frame" x="0.0" y="0.0" width="71" height="19"/>
+                                                                                        <rect key="frame" x="0.0" y="0.0" width="71" height="21"/>
                                                                                         <subviews>
-                                                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Features" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XA5-xa-1xC">
-                                                                                                <rect key="frame" x="0.0" y="0.0" width="71" height="17"/>
+                                                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Features" textAlignment="center" lineBreakMode="tailTruncation" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XA5-xa-1xC">
+                                                                                                <rect key="frame" x="0.0" y="0.0" width="71" height="19"/>
+                                                                                                <constraints>
+                                                                                                    <constraint firstAttribute="height" constant="19" id="xcI-Mk-Q6v"/>
+                                                                                                </constraints>
                                                                                                 <fontDescription key="fontDescription" name="Reader-Bold" family="Reader" pointSize="17"/>
                                                                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                                                 <nil key="highlightedColor"/>
                                                                                             </label>
                                                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BuB-ni-Vps">
-                                                                                                <rect key="frame" x="0.0" y="17" width="71" height="2"/>
+                                                                                                <rect key="frame" x="0.0" y="19" width="71" height="2"/>
                                                                                                 <color key="backgroundColor" red="0.85900002720000002" green="0.17100000379999999" blue="0.21899999680000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                                                 <constraints>
                                                                                                     <constraint firstAttribute="height" constant="2" id="uD2-qp-nOi"/>
@@ -351,12 +354,12 @@
                                                                                         </constraints>
                                                                                     </view>
                                                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PXN-On-kxw">
-                                                                                        <rect key="frame" x="0.0" y="29" width="636" height="0.0"/>
+                                                                                        <rect key="frame" x="0.0" y="31" width="636" height="0.0"/>
                                                                                         <fontDescription key="fontDescription" name="Reader" family="Reader" pointSize="15"/>
                                                                                         <nil key="highlightedColor"/>
                                                                                     </label>
                                                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="chr-ub-X5a">
-                                                                                        <rect key="frame" x="0.0" y="39" width="45" height="34"/>
+                                                                                        <rect key="frame" x="0.0" y="41" width="45" height="34"/>
                                                                                         <subviews>
                                                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Unit" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bVb-tm-MfS">
                                                                                                 <rect key="frame" x="0.0" y="0.0" width="621" height="15"/>
@@ -435,10 +438,10 @@
                                                                                 </constraints>
                                                                             </view>
                                                                             <view clipsSubviews="YES" contentMode="scaleToFill" placeholderIntrinsicWidth="696" placeholderIntrinsicHeight="0.0" translatesAutoresizingMaskIntoConstraints="NO" id="ral-Qk-yLK">
-                                                                                <rect key="frame" x="0.0" y="88" width="636" height="0.0"/>
+                                                                                <rect key="frame" x="0.0" y="90" width="636" height="0.0"/>
                                                                             </view>
                                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HK7-2k-hNf" userLabel="HowToUse">
-                                                                                <rect key="frame" x="0.0" y="88" width="636" height="44"/>
+                                                                                <rect key="frame" x="0.0" y="90" width="636" height="44"/>
                                                                                 <subviews>
                                                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="L0Q-Mc-ggP">
                                                                                         <rect key="frame" x="0.0" y="0.0" width="93" height="19"/>
@@ -484,7 +487,7 @@
                                                                                 </constraints>
                                                                             </view>
                                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="h1g-sR-Nnj" userLabel="Trouble" customClass="ProductDetailSkinConcernView" customModule="Share_Beauty_App" customModuleProvider="target">
-                                                                                <rect key="frame" x="0.0" y="152" width="636" height="819"/>
+                                                                                <rect key="frame" x="0.0" y="154" width="636" height="817"/>
                                                                                 <subviews>
                                                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="en1-Za-qmT">
                                                                                         <rect key="frame" x="0.0" y="0.0" width="111.5" height="19"/>
@@ -522,7 +525,7 @@
                                                                                         </connections>
                                                                                     </button>
                                                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mt0-Ad-5ei" customClass="TroubleSelectView" customModule="Share_Beauty_App" customModuleProvider="target">
-                                                                                        <rect key="frame" x="0.0" y="29" width="636" height="790"/>
+                                                                                        <rect key="frame" x="0.0" y="29" width="636" height="788"/>
                                                                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                                                     </view>
                                                                                 </subviews>
