--- a/Share Beauty App/Views/Gsc/GscHeaderView.xib
+++ b/Share Beauty App/Views/Gsc/GscHeaderView.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -75,15 +75,15 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sqm-fp-hlP" customClass="BaseButton" customModule="Share_Beauty_App" customModuleProvider="target">
-                    <rect key="frame" x="45" y="6" width="350" height="30"/>
+                    <rect key="frame" x="45" y="6" width="450" height="30"/>
                     <gestureRecognizers/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="350" id="ZOb-BM-ulW"/>
+                        <constraint firstAttribute="width" constant="450" id="ZOb-BM-ulW"/>
                         <constraint firstAttribute="height" constant="30" id="nw9-dh-9w9"/>
                     </constraints>
                     <fontDescription key="fontDescription" name="Optima-Bold" family="Optima" pointSize="17"/>
                     <inset key="titleEdgeInsets" minX="34" minY="0.0" maxX="0.0" maxY="0.0"/>
-                    <state key="normal" title="FIND YOUR PERFECT UV PROTECTION" backgroundImage="s_title.png"/>
+                    <state key="normal" title="FIND YOUR PERFECT UV PROTECTION11111111111" backgroundImage="s_title.png"/>
                     <connections>
                         <action selector="onTapFind:" destination="-1" eventType="touchUpInside" id="ChT-40-dMX"/>
                     </connections>
@@ -159,6 +159,6 @@
         <image name="s_back.png" width="30" height="30"/>
         <image name="s_home.png" width="30" height="30"/>
         <image name="s_play.png" width="37" height="26"/>
-        <image name="s_title.png" width="350" height="30"/>
+        <image name="s_title.png" width="450" height="30"/>
     </resources>
 </document>
